--- a/css/style-portfolio.css
+++ b/css/style-portfolio.css
@@ -337,6 +337,7 @@ header {
   color: black;
   font: 3vw 'Gilroy', sans-serif;
   font-weight: 500;
+  text-align: center;
 }
 
 .portfolio-category{
