--- a/css/style.css
+++ b/css/style.css
@@ -737,3 +737,56 @@ footer{
 .back_to_top-show {
   display: block;
 }
+
+/*Логин*/
+
+.login-pos{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login{
+  padding: 6vw 4vw;
+  border: 1px solid black;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 4vw;
+}
+
+.login-box{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.login-input{
+  background: rgba(0, 0, 0, .3);
+  border: 1px solid black;
+  box-sizing: border-box;
+}
+
+.login-tittle{
+  width: 100%;
+  text-align: center;
+}
+
+.login-submit{
+  width: 100%;
+  text-align: center;
+}
+
+.login-button{
+  border: 1px solid black;
+  padding: 1vw 2vw;
+}
+
+.login-error{
+  width: 100%;
+  text-align: center;
+  color: red;
+}
